-Changed some minor stuff. -SVN:ignore.

--- a/rascal-fragment.pc.in
+++ b/rascal-fragment.pc.in
@@ -4,5 +4,5 @@ Maintainers=lankamp@cwi.nl
 Name: rascal-fragment
 Version: 0.1
 Description: Rascal fragment
-Requires: sdf,sglr-invoker
+Requires: sglr-invoker
 FragmentHost=rascal-plugin
