--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,4 @@ include $(top_srcdir)/Makefile.fragment.meta
 
 ACLOCAL_AMFLAGS = -I .
 
-CLEANFILES += rascal-fragment-linux_x86.jar
+EXTRA_DIST += rascal-fragment-linux_x86.jar
